--- a/index.html
+++ b/index.html
@@ -1,4 +1,97 @@
-<ul>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Effective Solutions
+    for Your Business"
+    />
+    <title>Effective Solutions for Your Business</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-web-studio">Studio</span></a
+        >
+        <ul>
+          <li><a href="./index.html" class="header-list-items">Studio</a></li>
+          <li>
+            <a href="./index.html" class="header-list-items">Portfolio</a>
+          </li>
+          <li><a href="./index.html" class="header-list-items">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="header-address">
+        <ul class="header-address-list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="info"
+              >info@devstudio.com</a
+            ><br />
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="info">+11 (000) 111-11-11</a
+            ><br />
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section class="first-section">
+        <h1 class="title-first-section">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="button">Order Service</button>
+      </section>
+      <section class="second-section">
+        <h2 class="third-section-title">Advantages</h2>
+        <ul>
+          <li>
+            <h3 class="list-item-second">Strategy</h3>
+            <p class="list-item-second-paragraph">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3 class="list-item-second">Punctuality</h3>
+            <p class="list-item-second-paragraph">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3 class="list-item-second">Diligence</h3>
+            <p class="list-item-second-paragraph">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3 class="list-item-second">Technologies</h3>
+            <p class="list-item-second-paragraph">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="third-section">
+        <h2 class="third-section-title">Our Team</h2>
+        <ul>
           <li class="image-third-section">
             <img src="./img/images1.jpg" width="264" alt="photo 1" />
             <h3 class="list-item-third">Mark Guerrero</h3>
@@ -25,32 +118,32 @@
         <h2 class="third-section-title">Our Portfolio</h2>
         <ul>
           <li>
-            <img src="./images5.jpg" width="360" alt="photo 1" />
+            <img src="./img/images5.jpg" width="360" alt="photo 1" />
             <h3 class="list-item-third">Banking App</h3>
             <p class="list-item-third-paragraph">App</p>
           </li>
           <li>
-            <img src="./images6.jpg" width="360" alt="photo 2" />
+            <img src="./img/images6.jpg" width="360" alt="photo 2" />
             <h3 class="list-item-third">Cashless Payment</h3>
             <p class="list-item-third-paragraph">Marketing</p>
           </li>
           <li>
-            <img src="./images7.jpg" width="360" alt="photo 3" />
+            <img src="./img/images7.jpg" width="360" alt="photo 3" />
             <h3 class="list-item-third">Meditation App</h3>
             <p class="list-item-third-paragraph">App</p>
           </li>
           <li>
-            <img src="./images8.jpg" width="360" alt="photo 4" />
+            <img src="./img/images8.jpg" width="360" alt="photo 4" />
             <h3 class="list-item-third">Taxi Service</h3>
             <p class="list-item-third-paragraph">Marketing</p>
           </li>
           <li>
-            <img src="./images9.jpg" width="360" alt="photo 5" />
+            <img src="./img/images9.jpg" width="360" alt="photo 5" />
             <h3 class="list-item-third">Screen Illustrations</h3>
             <p class="list-item-third-paragraph">Design</p>
           </li>
           <li>
-            <img src="./images10.jpg" width="360" alt="photo 6" />
+            <img src="./img/images10.jpg" width="360" alt="photo 6" />
             <h3 class="list-item-third">Online Courses</h3>
             <p class="list-item-third-paragraph">Marketing</p>
           </li>
