--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
       </header>
     </div>
     <main>
-      <section class="first-section">
-        <h1 class="title-first-section">
-          Effective Solutions for Your Business
-        </h1>
-        <button type="button" class="button">Order Service</button>
-      </section>
+      <div class="container">
+        <section class="first-section">
+          <h1 class="title-first-section">
+            Effective Solutions for Your Business
+          </h1>
+          <button type="button" class="button">Order Service</button>
+        </section>
+      </div>
       <section class="second-section">
         <h2 class="third-section-title">Advantages</h2>
         <ul>
