--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </header>
     <main>
-      <section class="first-section">
+      <section class="first-section" class="section">
         <div class="container">
           <h1 class="title-first-section">
             Effective Solutions for Your Business
@@ -69,7 +69,7 @@
           <button type="button" class="button">Order Service</button>
         </div>
       </section>
-      <section class="second-section">
+      <section class="second-section" class="section">
         <div class="container">
           <h2 class="third-section-title">Advantages</h2>
           <ul>
@@ -104,7 +104,7 @@
           </ul>
         </div>
       </section>
-      <section class="third-section">
+      <section class="third-section" class="section">
         <div class="container">
           <h2 class="third-section-title">Our Team</h2>
           <ul>
@@ -131,7 +131,7 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="container">
           <h2 class="third-section-title">Our Portfolio</h2>
           <ul>
