--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <header class="header-section">
       <div class="container">
-        <nav>
+        <nav class="header-navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-web-studio">Studio</span></a
           >
