--- a/index.html
+++ b/index.html
@@ -35,15 +35,19 @@
           <a class="logo" href="./index.html"
             >Web<span class="logo-web-studio">Studio</span></a
           >
-          <ul>
-            <li><a href="./index.html" class="header-list-items">Studio</a></li>
-            <li>
-              <a href="./index.html" class="header-list-items">Portfolio</a>
-            </li>
-            <li>
-              <a href="./index.html" class="header-list-items">Contacts</a>
-            </li>
-          </ul>
+          <menu class="menu-cl">
+            <ul>
+              <li>
+                <a href="./index.html" class="header-list-items">Studio</a>
+              </li>
+              <li>
+                <a href="./index.html" class="header-list-items">Portfolio</a>
+              </li>
+              <li>
+                <a href="./index.html" class="header-list-items">Contacts</a>
+              </li>
+            </ul>
+          </menu>
         </nav>
         <address class="header-address">
           <ul class="header-address-list">
