--- a/index.html
+++ b/index.html
@@ -32,22 +32,20 @@
     <header class="header-section">
       <div class="container">
         <nav class="header-navigation">
-          <menu class="menu-cl">
-            <a class="logo" href="./index.html"
-              >Web<span class="logo-web-studio">Studio</span></a
-            >
-            <ul>
-              <li>
-                <a href="./index.html" class="header-list-items">Studio</a>
-              </li>
-              <li>
-                <a href="./index.html" class="header-list-items">Portfolio</a>
-              </li>
-              <li>
-                <a href="./index.html" class="header-list-items">Contacts</a>
-              </li>
-            </ul>
-          </menu>
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-web-studio">Studio</span></a
+          >
+          <ul class="menu-cl">
+            <li>
+              <a href="./index.html" class="header-list-items">Studio</a>
+            </li>
+            <li>
+              <a href="./index.html" class="header-list-items">Portfolio</a>
+            </li>
+            <li>
+              <a href="./index.html" class="header-list-items">Contacts</a>
+            </li>
+          </ul>
         </nav>
         <address class="header-address">
           <ul class="header-address-list">
