--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             >Web<span class="logo-web-studio">Studio</span></a
           >
           <ul class="menu-cl">
-            <li>
+            <li class="list-item">
               <a href="./index.html" class="header-list-items">Studio</a>
             </li>
-            <li>
+            <li class="list-item">
               <a href="./index.html" class="header-list-items">Portfolio</a>
             </li>
-            <li>
+            <li class="list-item">
               <a href="./index.html" class="header-list-items">Contacts</a>
             </li>
           </ul>
