--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <header class="header-section">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-web-studio">Studio</span></a
