--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class="header-section">
       <div class="container header-container">
         <nav class="header-navigation">
-          <a class="logo" href="./index.html"
+          <a class="logo header-logo" href="./index.html"
             >Web<span class="logo-web-studio">Studio</span></a
           >
           <ul class="menu-cl">
