--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </header>
     <main>
-      <section class="first-section" class="section">
+      <section class="first-section">
         <div class="container">
           <h1 class="title-first-section">
             Effective Solutions for Your Business
@@ -71,7 +71,7 @@
           <button type="button" class="button">Order Service</button>
         </div>
       </section>
-      <section class="second-section" class="section">
+      <section class="second-section">
         <div class="container">
           <h2 class="third-section-title">Advantages</h2>
           <ul>
@@ -106,7 +106,7 @@
           </ul>
         </div>
       </section>
-      <section class="third-section" class="section">
+      <section class="third-section">
         <div class="container">
           <h2 class="third-section-title">Our Team</h2>
           <ul>
