--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
             <li>
               <a href="mailto:info@devstudio.com" class="info"
                 >info@devstudio.com</a
-              ><br />
+              >
             </li>
             <li>
-              <a href="tel:+110001111111" class="info">+11 (000) 111-11-11</a
-              ><br />
+              <a href="tel:+110001111111" class="info">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
