--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
       </section>
       <section class="second-section">
         <div class="container">
-          <h2 class="third-section-title">Advantages</h2>
+          <h2 class="third-section-title" class="visually-hidden">
+            Advantages
+          </h2>
           <ul>
             <li>
               <h3 class="list-item-second">Strategy</h3>
