--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
       </section>
       <section class="second-section">
         <div class="container">
-          <h2 class="third-section-title" class="visually-hidden">
-            Advantages
-          </h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul>
             <li>
               <h3 class="list-item-second">Strategy</h3>
