--- a/index.html
+++ b/index.html
@@ -73,29 +73,29 @@
       <section class="second-section">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
-          <ul>
-            <li>
+          <ul class="adv-list">
+            <li class="adv-list-item">
               <h3 class="list-item-second">Strategy</h3>
               <p class="list-item-second-paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="adv-list-item">
               <h3 class="list-item-second">Punctuality</h3>
               <p class="list-item-second-paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="adv-list-item">
               <h3 class="list-item-second">Diligence</h3>
               <p class="list-item-second-paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="adv-list-item">
               <h3 class="list-item-second">Technologies</h3>
               <p class="list-item-second-paragraph">
                 Design practice focused on digital experiences. We bring forth a
