--- a/index.html
+++ b/index.html
@@ -108,25 +108,33 @@
       <section class="third-section">
         <div class="container">
           <h2 class="third-section-title">Our Team</h2>
-          <ul>
+          <ul class="people-pics">
             <li class="image-third-section">
               <img src="./img/images1.jpg" width="264" alt="photo 1" />
-              <h3 class="list-item-third">Mark Guerrero</h3>
+              <div class="name">
+                <h3 class="list-item-third">Mark Guerrero</h3>
+              </div>
               <p class="list-item-third-paragraph">Product Designer</p>
             </li>
             <li class="image-third-section">
               <img src="./img/images2.jpg" width="264" alt="photo 2" />
-              <h3 class="list-item-third">Tom Ford</h3>
+              <div class="name">
+                <h3 class="list-item-third">Tom Ford</h3>
+              </div>
               <p class="list-item-third-paragraph">Frontend Developer</p>
             </li>
             <li class="image-third-section">
               <img src="./img/images3.jpg" width="264" alt="photo 3" />
-              <h3 class="list-item-third">Camila Garcia</h3>
+              <div class="name">
+                <h3 class="list-item-third">Camila Garcia</h3>
+              </div>
               <p class="list-item-third-paragraph">Marketing</p>
             </li>
             <li class="image-third-section">
               <img src="./img/images4.jpg" width="264" alt="photo 4" />
-              <h3 class="list-item-third">Daniel Wilson</h3>
+              <div class="name">
+                <h3 class="list-item-third">Daniel Wilson</h3>
+              </div>
               <p class="list-item-third-paragraph">UI Designer</p>
             </li>
           </ul>
