--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
       <section class="section">
         <div class="container">
           <h2 class="third-section-title">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="apps">
+            <li class="apps-item">
               <img src="./img/images5.jpg" width="360" alt="photo 1" />
-              <h3 class="list-item-third">Banking App</h3>
-              <p class="list-item-third-paragraph">App</p>
+              <div class="div-container">
+                <h3 class="list-item-third">Banking App</h3>
+                <p class="list-item-third-paragraph">App</p>
+              </div>
             </li>
             <li>
               <img src="./img/images6.jpg" width="360" alt="photo 2" />
