--- a/index.html
+++ b/index.html
@@ -151,30 +151,40 @@
                 <p class="list-item-third-paragraph">App</p>
               </div>
             </li>
-            <li>
+            <li class="apps-item">
               <img src="./img/images6.jpg" width="360" alt="photo 2" />
-              <h3 class="list-item-third">Cashless Payment</h3>
-              <p class="list-item-third-paragraph">Marketing</p>
+              <div class="div-container">
+                <h3 class="list-item-third">Cashless Payment</h3>
+                <p class="list-item-third-paragraph">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="apps-item">
               <img src="./img/images7.jpg" width="360" alt="photo 3" />
-              <h3 class="list-item-third">Meditation App</h3>
-              <p class="list-item-third-paragraph">App</p>
+              <div class="div-container">
+                <h3 class="list-item-third">Meditation App</h3>
+                <p class="list-item-third-paragraph">App</p>
+              </div>
             </li>
-            <li>
+            <li class="apps-item">
               <img src="./img/images8.jpg" width="360" alt="photo 4" />
-              <h3 class="list-item-third">Taxi Service</h3>
-              <p class="list-item-third-paragraph">Marketing</p>
+              <div class="div-container">
+                <h3 class="list-item-third">Taxi Service</h3>
+                <p class="list-item-third-paragraph">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="apps-item">
               <img src="./img/images9.jpg" width="360" alt="photo 5" />
-              <h3 class="list-item-third">Screen Illustrations</h3>
-              <p class="list-item-third-paragraph">Design</p>
+              <div class="div-container">
+                <h3 class="list-item-third">Screen Illustrations</h3>
+                <p class="list-item-third-paragraph">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="apps-item">
               <img src="./img/images10.jpg" width="360" alt="photo 6" />
-              <h3 class="list-item-third">Online Courses</h3>
-              <p class="list-item-third-paragraph">Marketing</p>
+              <div class="div-container">
+                <h3 class="list-item-third">Online Courses</h3>
+                <p class="list-item-third-paragraph">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
