--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
           <h1 class="title-first-section">
             Effective Solutions for Your Business
           </h1>
-          <button type="button" class="button">Order Service</button>
+          <div class="second-class-button">
+            <button type="button" class="button">Order Service</button>
+          </div>
         </div>
       </section>
       <section class="second-section">
