--- a/index.html
+++ b/index.html
@@ -150,42 +150,42 @@
               <img src="./img/images5.jpg" width="360" alt="photo 1" />
               <div class="div-container">
                 <h3 class="list-item-third">Banking App</h3>
-                <p class="list-item-third-paragraph">App</p>
+                <p class="list-item-fourth-paragraph">App</p>
               </div>
             </li>
             <li class="apps-item">
               <img src="./img/images6.jpg" width="360" alt="photo 2" />
               <div class="div-container">
-                <h3 class="list-item-third">Cashless Payment</h3>
-                <p class="list-item-third-paragraph">Marketing</p>
+                <h3 class="list-item-fourth">Cashless Payment</h3>
+                <p class="list-item-fourth-paragraph">Marketing</p>
               </div>
             </li>
             <li class="apps-item">
               <img src="./img/images7.jpg" width="360" alt="photo 3" />
               <div class="div-container">
-                <h3 class="list-item-third">Meditation App</h3>
-                <p class="list-item-third-paragraph">App</p>
+                <h3 class="list-item-fourth">Meditation App</h3>
+                <p class="list-item-fourth-paragraph">App</p>
               </div>
             </li>
             <li class="apps-item">
               <img src="./img/images8.jpg" width="360" alt="photo 4" />
               <div class="div-container">
                 <h3 class="list-item-third">Taxi Service</h3>
-                <p class="list-item-third-paragraph">Marketing</p>
+                <p class="list-item-fourth-paragraph">Marketing</p>
               </div>
             </li>
             <li class="apps-item">
               <img src="./img/images9.jpg" width="360" alt="photo 5" />
               <div class="div-container">
-                <h3 class="list-item-third">Screen Illustrations</h3>
-                <p class="list-item-third-paragraph">Design</p>
+                <h3 class="list-item-fourth">Screen Illustrations</h3>
+                <p class="list-item-fourth-paragraph">Design</p>
               </div>
             </li>
             <li class="apps-item">
               <img src="./img/images10.jpg" width="360" alt="photo 6" />
               <div class="div-container">
-                <h3 class="list-item-third">Online Courses</h3>
-                <p class="list-item-third-paragraph">Marketing</p>
+                <h3 class="list-item-fourth">Online Courses</h3>
+                <p class="list-item-fourth-paragraph">Marketing</p>
               </div>
             </li>
           </ul>
