--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <li class="apps-item">
               <img src="./img/images5.jpg" width="360" alt="photo 1" />
               <div class="div-container">
-                <h3 class="list-item-third">Banking App</h3>
+                <h3 class="list-item-fourth">Banking App</h3>
                 <p class="list-item-fourth-paragraph">App</p>
               </div>
             </li>
@@ -170,7 +170,7 @@
             <li class="apps-item">
               <img src="./img/images8.jpg" width="360" alt="photo 4" />
               <div class="div-container">
-                <h3 class="list-item-third">Taxi Service</h3>
+                <h3 class="list-item-fourth">Taxi Service</h3>
                 <p class="list-item-fourth-paragraph">Marketing</p>
               </div>
             </li>
